@@ -651,7 +651,8 @@ RECURSIVE              = YES
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
 EXCLUDE                =  ../share \
-                          ../src
+                          ../src   \
+                          ../include/NewWave/MomentumHelpers.hh
 
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or 
